# Cespunromanii-poo-1312-2025

./: .env  CMakeLists.txt  README.md  configure.json  intrebari.json  main.cpp  tastatura.txt
.github/actions/configure-cmake/: action.yml
.github/actions/cppcheck/: action.yml
.github/actions/runtime-checks/: action.yml
.github/workflows/: cmake.yml
cmake/: CompilerFlags.cmake
cmake/simsimd-patches/: CMakeLists.txt
scripts/: cmake.sh  run_cppcheck.sh  run_llm.sh
source/: AI.cpp  AI.h  AIConnectionPool.cpp  AIConnectionPool.h  AITimeoutException.h  App.cpp  App.h  ClipArts.cpp  ClipArts.h  Config.cpp  Config.h  Family.cpp  Family.h  Game.cpp  Game.h  NormalGame.cpp  NormalGame.h  Player.cpp  Player.h  Question.cpp  Question.h  QuestionKiller.cpp  QuestionKiller.h  QuestionOptional.cpp  QuestionOptional.h  QuestionRandBonus.cpp  QuestionRandBonus.h  RollDice.cpp  RollDice.h  Round.cpp  Round.h  ScoreManager.cpp  ScoreManager.h  SpecialGame.cpp  SpecialGame.h  SpecialRound.cpp  SpecialRound.h  configure.json  data.json  intrebari.json  (+2 more)
source/catchTheStarts/: FallingObjectFactory.cpp  FallingObjectFactory.h  GameStars.cpp  GameStars.h  Observer.cpp  Observer.h  Star.cpp  Star.h  Tracker.cpp  Tracker.h  Utils.cpp  Utils.h  WinLoseDisplay.cpp  WinLoseDisplay.h
source/exceptions/: AITimeoutException.cpp  AITimeoutException.h  FileReadException.cpp  FileReadException.h  OutOfRangeException.cpp  OutOfRangeException.h
source/gameClasses/: Game.cpp  Game.h  NormalGame.cpp  NormalGame.h  SpecialGame.cpp  SpecialGame.h
source/questionClasses/: Question.cpp  Question.h  QuestionFactory.cpp  QuestionFactory.h  QuestionKiller.cpp  QuestionKiller.h  QuestionMath.cpp  QuestionMath.h  QuestionOptional.cpp  QuestionOptional.h  QuestionRandBonus.cpp  QuestionRandBonus.h
source/questionResources/: QMresources.json  QOresources.json  QRBresources.json  intrebari.json
source/roundClasses/: NormalRound.cpp  NormalRound.h  Round.cpp  Round.h  SpecialRound.cpp  SpecialRound.h
src/: intrebari.json
